--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,18 +40,20 @@ dependencies:
 
   dio: ^5.9.0
   intl: ^0.19.0
+  injector: ^4.0.0
+  get_it: ^8.2.0
 dev_dependencies:
   json_serializable: ^6.7.1
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-
+  injectable_generator: ^2.9.0
+  build_runner: ^2.9.0
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
